# cal7tor

./: Cargo.toml  README.md
src/: filter.rs  ics.rs  info.rs  main.rs  timetable.rs  utils.rs
src/timetable/: models.rs
src/utils/: models.rs
