[package]
name = "cal7tor"
version = "0.9.2"
authors = ["Mylloon"]
edition = "2021"
description = "Timetable extractor for the Paris Cité master's degree in IT"
readme = "README.md"
repository = "https://git.mylloon.fr/Anri/cal7tor"
keywords = ["scrape", "calendar"]
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12" }
tokio = { version = "1.40", features = ["full"] }
scraper = "0.20"
regex = "1.10"
chrono = "0.4.38"
ics = { version = "0.5", default-features = false }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

[lints.clippy]
pedantic = "warn"
