[package]
name = "cal7tor"
version = "0.10.0"
authors = ["Mylloon"]
edition = "2021"
description = "Timetable extractor for the Paris Cité master's degree in IT"
readme = "README.md"
repository = "https://git.mylloon.fr/Anri/cal7tor"
keywords = ["scrape", "calendar", "paris diderot", "paris cité"]
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12" }
tokio = { version = "1.42", features = ["full"] }
scraper = "0.22"
regex = "1.11"
chrono = "0.4.39"
ics = { version = "0.5", default-features = false }
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

[lints.clippy]
pedantic = "warn"
